tests/integration/error_reporting.stderr.golden
Error: error.UnknownWord
  at line 6: unknown-word-here
